--- a/project/index.html
+++ b/project/index.html
@@ -19,7 +19,7 @@
         <div class="container">
             <div class="header-wrapper">
                 <a href="https://it-incubator.by/" class="logo">
-                    <img class="logo-img" src="./assets/images/Logo.svg" alt="icon">
+                    <img class="logo-img" src="assets/images/Logo.svg" alt="icon">
                 </a>
             
                 <ul class="menu">
@@ -27,6 +27,7 @@
                     <li class="menu-item"><a href="" class="menu-link">Rates</a></li>
                     <li class="menu-item"><a href="" class="menu-link">Create account</a></li>
                 </ul>
+                <img class="menu-icon" src="assets/images/menu-burger.svg" alt="menu-icon">
             </div>
         </div>
     </header>
